WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151050
Web Inspector: REGRESSION: 2nd level inspector should not be able to dock to first
https://bugs.webkit.org/show_bug.cgi?id=151050
Summary
Web Inspector: REGRESSION: 2nd level inspector should not be able to dock to ...
Joseph Pecoraro
Reported
2015-11-09 13:01:28 PST
* SUMMARY REGRESSION: 2nd level inspector should not be able to dock to first. * STEPS TO REPRODUCE 1. Inspect about:blank 2. Inspect Inspector => inspector² has dock toolbar icons to dock to inspector¹, it should NOT
Attachments
[PATCH] Proposed Fix
(1.37 KB, patch)
2015-11-09 13:02 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-11-09 13:02:11 PST
<
rdar://problem/23468180
>
Joseph Pecoraro
Comment 2
2015-11-09 13:02:40 PST
Created
attachment 265086
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 3
2015-11-09 13:05:32 PST
Comment on
attachment 265086
[details]
[PATCH] Proposed Fix Oooh, neat. r=me
WebKit Commit Bot
Comment 4
2015-11-09 14:07:17 PST
Comment on
attachment 265086
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 265086 Committed
r192178
: <
http://trac.webkit.org/changeset/192178
>
WebKit Commit Bot
Comment 5
2015-11-09 14:07:22 PST
All reviewed patches have been landed. Closing bug.
Nikita Vasilyev
Comment 6
2015-11-12 14:32:19 PST
I liked when inspector² was dockable :(
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug