Web Inspector: REGRESSION: 2nd level inspector should not be able to dock to first https://bugs.webkit.org/show_bug.cgi?id=151050

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-11-09
Reviewed by Brian Burg.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformCanAttach):
Check now that the inspected view can be a WKWebView.

Canonical link: https://commits.webkit.org/169255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192178 268f45cc-cd09-0410-ab3c-d52691b4dbfc